force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/QtC_Mig_Invoice_Temp_Table__c.object-meta.xml
<CustomObject>
    <label>QtC Mig Invoice Temp Table</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>QtC Mig Invoice Temp Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QtC Mig Invoice Temp Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>