force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Billing_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_1__c</fullName>
    <label>Billing Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>