force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>QtC Mig Invoice Temp Table</relationshipLabel>
    <relationshipName>QtC_Mig_Invoice_Temp_Table</relationshipName>
    <type>Lookup</type>
</CustomField>