force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency(c)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>