force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_ID__c</fullName>
    <label>Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>