force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/InvLineAmount__c.field-meta.xml
<CustomField>
    <fullName>InvLineAmount__c</fullName>
    <label>InvLineAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>