force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>