force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/OA_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>OA_Business_Unit__c</fullName>
    <label>OA Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>