force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/OA_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_ID__c</fullName>
    <label>OA Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>