force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/Payment_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payment_Exchange_Rate__c</fullName>
    <label>Payment Exchange Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>