force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>