force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/ROR_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Date__c</fullName>
    <label>ROR Date</label>
    <type>Date</type>
</CustomField>