force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/T_OSAMatched__c.field-meta.xml
<CustomField>
    <fullName>T_OSAMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T_OSAMatched?</label>
    <type>Checkbox</type>
</CustomField>