force-app/main/default/objects/QtC_Mig_Invoice_Temp_Table__c/fields/To_Be_Emailed__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Emailed__c</fullName>
    <label>To Be Emailed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>